--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -1,3 +1,20 @@
-<h1>These are our latest videos</h1>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+<div class="container py-5">
+    <h1>These are our latest videos</h1>
 
 {# here you can use the Twig variable 'videos' that gets passed from the controller #}
+    <ul class="list-group list-group-flush">
+        {% for key, video in videos %}
+        <li class="list-group-item"> 
+            <a href="/videos/{{key}}" class="list-group-item list-group-item-action">
+                {{video.name}}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
+        
+      
