--- a/templates/video.html.twig
+++ b/templates/video.html.twig
@@ -1,6 +1,36 @@
-<h1>Template for a video</h1>
+{% extends 'base.html.twig' %}
 
-{# 
-   here you can use the Twig variable 'videodata' that gets passed from the controller. 
-   it has the fields 'name' and 'file' 
-#}
+{% block stylesheets %}
+   {{ parent() }}
+   <link rel="stylesheet" href="/static/plyr.css" 
+{% endblock %}
+
+
+{% block body %}
+   <div class="container py-5">
+      <div class="row">
+         <div class="col-sm-2 col-xs-0"></div>
+         <div class="col-sm-8 col-xs-12">
+            <h4 class="pb-2">{{videodata.name}}</h4>
+            <video id="player" playsinline controls width="100%">
+               <source src="/videofiles/{{videodata.file}}" type="video/mp4" />
+            </video>
+         </div>
+         <div class="col-sm-2 col-xs-0"></div>
+      </div>
+   </div>
+
+   {% block javascripts %}
+      {{ parent() }}
+      <script src="/static/plyr.js"></script>
+      <script>
+         const player = new Plyr('#player');
+      </script>
+   {% endblock %}
+{% endblock %}
+
+
+
+
+
+
